src/main/java/com/example/githubrepos/api/error/dto/UserNotFoundExceptionResponseDTO.java
package com.example.githubrepos.api.error.dto;

import org.springframework.http.HttpStatus;

public record UserNotFoundExceptionResponseDTO(HttpStatus status, String message) {
}
